--- a/style.css
+++ b/style.css
@@ -1,10 +1,18 @@
-html{
+*{
     scroll-behavior: smooth;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+.centrado{
+    width: 1000px;
+    margin-left: auto;
+    margin-right: auto;
 }
 body{
     
     background-color: #141f27;
-    margin: 0 auto;
+    margin: auto;
 
 }
 h1, h2, p, a, li{
@@ -21,26 +29,62 @@ h1, h2{
 }
 a:hover{
     color:rgb(175, 247, 7);
+    transform: scale(1.5);
+    transition: transform 0.6s ease-out;
 }
 nav{
     display: flex;
     justify-content: center;
 
 }
-ul {
-    list-style: none;
+#presentacion{
+    margin-bottom: 30px;
+}
+
+#lenguajes{
+    margin-top: 20px;
+    height: 250px;
+    display: flex;
+    justify-content: center;
+}
+#lenguajes2{
+    height: 250px;
+    display: flex;
+    justify-content: center;
+}
+#lenguajes3{
+    height: 250px;
+    display: flex;
+    justify-content: center;
 }
 
 #html, #css, #javascript, #csharp, #mysql{
-    height: 20%;
-    width: 20%;
+    display: inline-block;
+    margin-left: auto;
+    margin-right: auto;
+    
 }
 
 
-#presentacion, #lenguajes, #proyectos, #contacto{
+#html:hover, #css:hover, #javascript:hover, #csharp:hover, #mysql:hover{
+    display: inline-block;
+    margin-left: auto;
+    margin-right: auto;
+    transform: scale(1.1);
+    transition: transform 0.6s ease-out;
+    
+}
+
+
+
+#presentacion, #proyectos, #contacto{
+    margin-top: 2%;
     display: flex;
     justify-content: center;
 }
 .pieDePagina{
     text-align: center;
+}
+footer{
+    height: 70px;
 }
