--- a/style.css
+++ b/style.css
@@ -56,39 +56,25 @@ nav{
 }
 
 #lenguajes{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
     margin-top: 20px;
-    height: 250px;
-    display: flex;
-    justify-content: center;
-    min-width: 200px;
-}
-#lenguajes2{
-    height: 250px;
-    display: flex;
-    min-width: 200px;
     justify-content: center;
 }
 
 #html, #css, #javascript, #csharp, #mysql, #java{
-    display: inline-block;
-    margin-left: auto;
-    margin-right: auto;
-    
+    transition: transform 0.6s ease-out;
+    padding: 30px;
 }
 
 
 #html:hover, #css:hover, #javascript:hover, #csharp:hover, #mysql:hover, #java:hover{
-    display: inline-block;
-    margin-left: auto;
-    margin-right: auto;
     transform: scale(1.1);
-    transition: transform 0.6s ease-out;
     
 }
 
-
-
-#presentacion, #proyectos, #contacto{
+#presentacion, #contacto{
     margin-top: 2%;
     display: flex;
     justify-content: center;
